--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ng_db
 DB_PORT=3306
-DB_DATABASE=ng
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=database
+DB_USERNAME=admin
+DB_PASSWORD=admin
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -35,9 +35,9 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
-CACHE_STORE=database
+CACHE_STORE=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -63,3 +63,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+APP_CONTAINER_NAME=ng_app
+UNIQUE_LINK_SALT=da09f143-1a6d-47e4-a594-b82b9dd0d122
